<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 23.03.21 21:17
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 11.03.21 23:22
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textSize="36sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editZaeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:hint="@string/zaeb"
                android:inputType="textMultiLine"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/btnSaveUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickSave"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>