<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by DemonApps on 24.04.21 0:37
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 24.04.21 0:24
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#19FFC400"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/showDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:textColor="#3D5AFE"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/showTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:hint="@string/title"
                android:textColor="?android:attr/colorMultiSelectHighlight"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/showZaeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:autofillHints="true"
                android:ems="10"
                android:gravity="start|top"
                android:text="@string/zaeb"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:autofillHints="true"
                android:ems="10"
                android:gravity="end"
                android:paddingTop="10dp"
                android:text="@string/autor"
                android:textColor="#FF3D00"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="Статус:"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:id="@+id/showIspolneno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Исполнение"
                    android:textColor="#00E676"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <Button
                android:id="@+id/onClickIspolneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onClickIspolneno"
                android:text="Сделано!!!"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>